# Synthetiser-Hackerspace

./: CMakeLists.txt  adsr.cpp  genWaveTables.py
headers/: audio.hpp  config.hpp  engine.hpp  functions.hpp  osc.hpp  tusb_config.h
headers/amp_envelope/: adsr.hpp
headers/filters/: baseEffect.hpp  baseFilter.hpp  customEffectsAndFilters.hpp
headers/oscilator/: channel.hpp  engine.hpp  mixer.hpp  notes.hpp  sampleGenerator.hpp  waveTableOscilator.hpp  waveTablegen.hpp  wave_generator.hpp  waves.hpp
src/: adsr.cpp  baseEffect.cpp  baseFilter.cpp  channel.cpp  customEffectsAndFilters.cpp  engine.cpp  functions.cpp  main.cpp  mixer.cpp  notes.cpp  osc.cpp  usb_descriptors.c  waveTableOscilator.cpp  waveTablegen.cpp
